Fix .skip-to-content when .devmode-warning visible

--- a/less/site.less
+++ b/less/site.less
@@ -58,7 +58,6 @@ a:hover {
 .main-header {
   background-color: @color-header-bg;
   color: @color-header;
-  position: relative;
 }
 
 .skip-to-content {
